<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_cur_rule"
        android:icon="@drawable/edit"
        android:title="@string/edit_cur_rule"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/add_rule"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_rule" />

    <item
        android:id="@+id/add_local_rule"
        android:title="@string/add_local_rule"
        app:showAsAction="withText" />

    <item
        android:id="@+id/add_net_rule"
        android:title="@string/net_add_rule"
        app:showAsAction="withText" />

    <item
        android:id="@+id/copy_rule"
        android:title="@string/copy_rule"
        app:showAsAction="withText" />

    <item
        android:id="@+id/save_pos"
        android:title="@string/save_pos"
        app:showAsAction="withText" />

    <item
        android:id="@+id/edit_rule"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/edit_rule" />

</menu>