<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save_rule"
        android:icon="@drawable/save"
        android:title="@string/save_rule"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/debug_rule"
        android:icon="@drawable/debug"
        android:title="@string/debug_rule"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/paste_rule"
        android:icon="?attr/actionModePasteDrawable"
        android:title="@string/paste_rule"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/copy_rule"
        android:icon="?attr/actionModeCopyDrawable"
        android:title="@string/copy_rule"
        app:showAsAction="ifRoom" />


</menu>