<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="1dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/edit_rule_name"
        android:layout_width="wrap_content"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="15dp"
        android:gravity="center"
        android:text="@string/add_local_rule"
        tools:ignore="RelativeOverlap" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/background">

        <ImageButton
            android:id="@+id/top_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/background"
            android:contentDescription="@string/to_top"
            android:src="@drawable/top"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/edit_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/background"
            android:contentDescription="@string/edit_cur_rule"
            android:src="@drawable/edit"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/remove_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/background"
            android:contentDescription="@string/remove"
            android:src="@drawable/remove"
            tools:targetApi="lollipop" />
    </LinearLayout>
</RelativeLayout>